2001-08-16  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cursor.c (move_rect): extracted helper function
	(clip_rect): ditto
	(draw_cursor_rectangle): new helper function
	(html_engine_draw_cell_cursor): new method for cell cursor
	drawing, uses draw_cursor_rectangle
	(html_engine_draw_cursor_in_area): call
	html_engine_draw_cell_cursor

	* htmlclueflow.c (update_item_number): don't update for non-items
	(op_cut): fixed few cases of item sequences and for crash in case
	that flow was whole deleted and destroyed

2001-08-15  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (get_pre_padding): don't handle ordered items
	differently
	(get_prev_relative_item): new helper function
	(get_next_relative_item): ditto
	(update_item_number): use new functions, allow lists to be
	interrupted by list with higher level
	(CLUEFLOW_ITEM_MARKER): make it 6 chars wide as number markers

	* gtkhtml.c (command): don't decrease indent on list item, rather
	just delete

	* htmlclueflow.c (save_plain): add padding even to empty lines,
	so we get item headings
	(plain_get_marker): new helper function
	(plain_padding): use plain_get_marker

	* htmlengine-edit-clueflowstyle.c: updated for list changes

	* htmlengine.c: rewritten/updated [un]ordered lists

	* htmlclueflow.c: rewritten/updated [un]ordered lists, implemented
	[un]ordered lists saving

	* htmlenums.h: redefined HTMLListType
	HTML_CLUEFLOW_STYLE_LIST_ITEM instead of plenty item types

	* gtkhtml.c (clueflow_style_to_paragraph_style): added item_type
	parametr
	(paragraph_style_to_clueflow_style): likewise

	* gtkhtml-enums.h: added
	GTK_HTML_COMMAND_PARAGRAPH_STYLE_ITEMALPHA command

2001-08-14  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (update_embedded): add begin/end painter calls
	around the update calls for things like HTMLImageInput.  

2001-08-13  Radek Doulik  <rodo@ximian.com>

	* htmlselection.c (test_point): new helper function
	(html_engine_point_in_selection): new method, tests if point is in